--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,6 @@
     --blue-color:#2196F3;
 }
 
-
-
-/* Колір основного тексту */
 /* основний колір текст color#212121:  */
 /* вторинний колір текст color#757575*/
 /* color: #FFFFFF білий */
@@ -17,91 +14,176 @@
 body{
     color: var(--primary-text-color);
     background-color:var(--white-color);
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    }
+
+ul {
+    list-style: none;
 }
+
+/* Header */
+
 /* Лого */
+
+.logo,
+.logo-text{
+font-family: 'Raleway', sans-serif;
+font-weight: 700;
+font-size: 26px;
+line-height: 1.2;
+text-decoration: none;
+}
 .logo{
-    color: #000000; ;
+    color: #000000; 
 }
 .logo-text{
     color:var(--blue-color);
 }
 
-ul{
-    list-style: none;
-}
-
-/* Header */
-.site-nav a{
-    color:var(--primary-text-color);
+/* Nav */
+.list-contact a,
+.list-nav a{
+    font-weight: 500;    
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 }
 .list-contact a{
-    color: var(--text-color);
+   color: var(--text-color);
 }
+.list-nav a{
+    color: var(--primary-text-color); 
+}
+.list-nav a:hover,
+.list-nav a:focus, 
 .list-contact a:hover,
 .list-contact a:focus{
-   color: var(--blue-color);
-}
-.section-text{
-    color:var(--text-color) ;
-}
-
-.link{
-    color: var(--primary-text-color);
-}
-.link:hover,
-.link:focus{
     color: var(--blue-color);
 }
+
+/* Cтилі html */
+
 /* Hero */
 
-.hero{
-    background-color: #2F303A; 
+.hero {
+    background-color: #2F303A;
 }
-.hero-title{
-     color:var(--white-color);
+.hero-title {
+    color: var(--white-color);
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
-.hero-button{
-    color:var(--white-color);
-    background-color:var(--blue-color);
+.hero-button {
+    color: var(--white-color);
+    background-color: #188CE8;
+    cursor: pointer;
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.8;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.06em;
+}
+.hero-button:hover,
+.hero-button:focus {
+   color: var(--blue-color);
 }
 
+/* Переваги студії */
+
+.advantages-title{
+font-weight: 700;
+font-size: 14px;
+line-height: 1.14;    
+text-transform: uppercase;    
+}
+.advantages-text{
+    line-height: 1.7;
+    color: var(--text-color);
+}
+
+/* Чим ми займаємось *
 /* Наша команда */
+.work-title,
+.team-title{
+font-weight: 700;
+font-size: 36px;
+line-height: 1.17;
+text-align: center;       
+}
 
-.team{
-    background-color:#F5F4FA; 
+.title-name,
+.team-text{
+font-size: 16px;
+line-height: 1.19;
+}
+.title-name {
+    font-weight: 500;
+}
+
+.team-text{
+    color: var(--text-color);
+}
+.team {
+    background-color: #F5F4FA;
 }
 
 /* Footer */
 .footer{
     background: #2F303A;;
 }
-.footer-address{
+
+.footer-link{
+    color: rgba(255, 255, 255, 0.6);
+    line-height: 1.71;
+    text-decoration: none;
+}
+.footer-color{
     color: var(--white-color);
 }
-.footer-link{
-    color:rgba(255, 255, 255, 0.6) ;
-}
-.footer-address:hover,
-.footer-address:focus,
 .footer-link:hover,
 .footer-link:focus{
     color: var(--blue-color);
 }
 
+ /* Стилі портфоліо */
+
 /* Кнопки портфоліо */
-.section-button{
-    color: var(--primary-text-color);   
+.projects-button{
+    color: var(--primary-text-color);  
+    background-color: #F5F4FA;
+    cursor: pointer;
+    font-family: inherit;
+    font-weight: 500;
+     font-size: 16px;
+    line-height: 1.6;                
 }
-.section-button:hover,
-.section-button:focus{
+.projects-button:hover,
+.projects-button:focus{
     color: var(--white-color);
     background-color: var(--blue-color);
 }
-/* Посилання в портфоліо */
-.list-title{
-    color: var(--primary-text-color);
+.projects-title{
+font-weight: 700;
+font-size: 18px;
+line-height: 2; 
+letter-spacing: 0.06em;   
+color: var(--primary-text-color);
 }
-.list-title:hover,
-.list-title:focus{
-    color: var(--blue-color);
+.projects-text{
+font-size: 16px;
+line-height: 1.9;
+color: var(--text-color);
+text-decoration: none;
+}
+
+.projects-list a{
+    text-decoration: none;
 }
