--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 :root{
     --primary-text-color:#212121;
     --text-color:#757575;
@@ -16,11 +17,17 @@ body{
     background-color:var(--white-color);
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
-    letter-spacing: 0.03em;
+    letter-spacing: 0.03em;    
     }
 
 ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
+}
+h1, h2, h3, p{
+    margin: 0;
+    padding: 0;
 }
 
 /* Header */
@@ -64,7 +71,7 @@ text-decoration: none;
 }
 
 .list-nav a.current{
-    color: var(--blue-color);
+     color: var(--blue-color);
 }
 
 .list-nav a:hover,
@@ -82,15 +89,15 @@ text-decoration: none;
 
 .hero {
     background-color: #2F303A;
+    text-align: center;    
 }
 .hero-title {
     color: var(--white-color);
     font-weight: 900;
     font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
+    line-height: 1.36;    
     letter-spacing: 0.06em;
-    text-transform: uppercase;
+    text-transform: uppercase;    
 }
 .hero-button {
     color: var(--white-color);
@@ -100,9 +107,11 @@ text-decoration: none;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.8;
-    display: flex;
-    align-items: center;
+    display: inline-block;    
     letter-spacing: 0.06em;
+    padding: 10px 32px;
+    border-radius: 4px; 
+    min-width: 216px;   
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -110,6 +119,7 @@ text-decoration: none;
 }
 
 /* Переваги студії */
+
 
 .advantages-title{
 font-weight: 700;
@@ -124,12 +134,13 @@ text-transform: uppercase;
 
 /* Чим ми займаємось *
 /* Наша команда */
+
 .work-title,
 .team-title{
 font-weight: 700;
 font-size: 36px;
 line-height: 1.17;
-text-align: center;       
+text-align: center;      
 }
 
 .title-name,
@@ -145,13 +156,30 @@ line-height: 1.19;
     color: var(--text-color);
 }
 .team {
-    background-color: #F5F4FA;
+    background-color: #F5F4FA;     
 }
+
+.section{
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+.no-padding{
+    padding-top: 0;
+}
+
 
 /* Footer */
 .footer{
-    background: #2F303A;;
+    background: #2F303A;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
+/* ????????? */
+/* .footer-logo {
+    padding-bottom: 20px;
+} */
+/* .footer-link{
+    margin-botton 9 px} */
 
 .footer-link{
     color: rgba(255, 255, 255, 0.6);
@@ -170,14 +198,24 @@ line-height: 1.19;
  /* Стилі портфоліо */
 
 /* Кнопки портфоліо */
+
+.projects{
+    margin-top: 94px;
+    margin-bottom: 94px;
+}
 .projects-button{
     color: var(--primary-text-color);  
     background-color: #F5F4FA;
     cursor: pointer;
     font-family: inherit;
     font-weight: 500;
-     font-size: 16px;
-    line-height: 1.6;                
+    font-size: 16px;
+    line-height: 1.6; 
+    display: inline-block;
+    text-align: center;
+    padding: 6px 22px;
+    border-radius: 4px;
+    min-width: 130px;
 }
 .projects-button:hover,
 .projects-button:focus{
@@ -200,4 +238,24 @@ text-decoration: none;
 
 .projects-list a{
     text-decoration: none;
+}
+
+.container{
+    margin: 0 auto;
+    width: 1170px;   
+    padding-left: 15px;
+    padding-right: 15px;
+    outline: 2px solid tomato;
+}
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
